log/build_2024-02-26_15-02-24/motor/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/groupl/MarcWS/install/motor/lib/python3.10/site-packages/motor/motorpwm.py", line 43
    	if direction == 1 && predir == 0:
    	                   ^
SyntaxError: invalid syntax

